--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2018"
 [dependencies]
 clap = "=3.0.0-beta.1"
 regex = "1"
+rusqlite = { version = "0.24", features = ["bundled", "functions", "limits", "load_extension"] }
