--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "onelo"
 version = "0.1.0"
-authors = ["Israel Fenor <israelfenor@gmail.com>", "Arnau Siches <asiches@gmail.com>"]
+authors = ["Israel Fenor <israelfenor@protonmail.com>", "Arnau Siches <asiches@gmail.com>"]
 edition = "2018"
 license = "MIT"
 description = "A knowledge graph sketch"
