--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,10 @@ path = "src/lib.rs"
 
 
 [dependencies]
+arrayvec = "0.5"
+blake3 = "0.3"
 chrono = "0.4"
 clap = "=3.0.0-beta.2"
+hex = "0.4"
 regex = "1"
 rusqlite = { version = "0.24", features = ["bundled", "functions", "limits", "load_extension"] }
