--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,4 +25,7 @@ chrono = "0.4"
 clap = "=3.0.0-beta.2"
 hex = "0.4"
 regex = "1"
-rusqlite = { version = "0.24", features = ["bundled", "functions", "limits", "load_extension"] }
+rusqlite = { version = "0.24", features = ["bundled", "blob", "functions", "limits", "load_extension"] }
+
+[build-dependencies]
+git2 = "0.13.11"
